[tool.poetry]
name = "flox-docker"
version = "0.1.0"
homepage = "https://github.com/getflox/flox-docker"
description = "Docker commands and authentication provider integration for flox"
authors = ["Michal Przytulski <michal@przytulski.pl>", "Daniel Ancuta <whisller@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
docker = "^4.2.0"
flox-core = "^0.1.0"
plumbum = "^1.6.8"

[tool.poetry.dev-dependencies]

[tool.poetry.plugins."flox.plugin"]
docker = "flox_docker:plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
